<resources>
    <string name="app_name">FinalSemesterExam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="username">Username</string>
    <string name="welcome_to_lnbti">Welcome to LNBTI</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="changeprofile">Change User Profile</string>
    <string name="changedetails">Update Details</string>
    <string name="menu_login">Login</string>
</resources>